--- a/Javascript_Homework/Homework_01.html
+++ b/Javascript_Homework/Homework_01.html
@@ -1,6 +1,6 @@
 <center>
     <h1>
-        Welcome to THE MOST BORING GAME
+        Thanks for attending THE MOST BORING GAME
     </h1>
     This game is EXTREMELY BORING and hope you have fun with it : )
 </center>
@@ -14,6 +14,6 @@
         alert("The game is end, thank you for playing the MOST BORING GAME");
     }
     else{
-        alert("Bye");
+        alert("OK, Bye");
     }
 </script>
