--- a/Javascript_Homework/Homework_01.html
+++ b/Javascript_Homework/Homework_01.html
@@ -1,6 +1,6 @@
 <center>
     <h1>
-        Thanks for attending THE MOST BORING GAME
+        Thanks for playing THE MOST BORING GAME
     </h1>
     This game is EXTREMELY BORING and hope you have fun with it : )
 </center>
