--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <h2>My Articles</h2>
     <h3>Machine Learning & Neural Network</h3>
-    <img src=https://markchenyutian.github.io/Markchen_Blog/Assets/1.png align="left" height="50%" width="50%">
+    <img src=https://markchenyutian.github.io/Markchen_Blog/Assets/1.png align="left" height="50%" width="50%"/>
 
     <ul>
         <li><a href="https://markchenyutian.github.io/Markchen_Blog/Javascript_Homework/Homework_01.html"> 20200911 Javascript Homework </a></li>
