Test Onedrive Embed

--- a/test/test.html
+++ b/test/test.html
@@ -1,2 +1,4 @@
 <h1>Google Slide Embed Test</h1>
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQHCqPurHZfJbAB4uiOqsdLORZGF8Jhqh4TFRgeTKh08XS5e_Ot7w0FEDJp0V5ju5lbJTx7q-oa7XsT/embed?start=false&loop=true&delayms=10000" frameborder="0" width="1440" height="839" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+<iframe src="https://onedrive.live.com/embed?cid=AACD96FD289D9DD0&resid=AACD96FD289D9DD0%2176270&authkey=AFhfXIApLRNkDqA&em=2" width="402" height="327" frameborder="0" scrolling="no"></iframe>
