--- a/test/test.html
+++ b/test/test.html
@@ -1,55 +1,10 @@
-<style>
-.flex__container {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    
-    width: 100%;
-  }
-  
-  .flex__item {
-    background-color: #fff;
-    border-radius: 4px;
-    
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    border-radius:10px;
-    cursor:pointer;
-    flex: 1 1 25vw;
-    min-width: 150px;
-    max-width: 300px;
-    min-height: 200px;
-    padding: 20px;
-    margin: 0 2vh;
-  }
-</style>
+<script>
+    function print(msg){
+        alert(document.getElementById("inputBox").value);
+    }
+</script>
 
-<div class="flex__container">
-    <div class="flex__item">
-        Test Card 1
-    </div>
-
-    <div class="flex__item">
-        Test Card 2
-    </div>
-
-    <div class="flex__item">
-        Test Card 3
-    </div>
-
-    <div class="flex__item">
-        Test Card 3
-    </div>
-
-    <div class="flex__item">
-        Test Card 3
-    </div>
-    <div class="flex__item">
-        Test Card 3
-    </div>
-    <div class="flex__item">
-        Test Card 3
-    </div>
-</div>
+<form>
+    <input type="text" name="name" id="inputBox"/>
+    <input type="button" name="button" value="Test" onclick="print();">
+</form>
