--- a/test/testingVersion.html
+++ b/test/testingVersion.html
@@ -1,14 +1,25 @@
+<!DOCTYPE html>
 <head>
-	<link rel="stylesheet" type="text/css" href="test.css">
+    <script type="text/javascript" src="../ComputerScience3_Homework/Week_5/Homework05.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#157878">
+    <link rel="stylesheet" href="../css/normalize.css">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="../css/Version4.css">
+    <link rel="stylesheet" href="../Asset/css/Unified_Style.css">
+    <script type="text/javascript" src="../ComputerScience3_Homework/Week_5/htmlInteraction.js"></script>
 </head>
-<nav>
-	<div class="content">
-	  <p>Nav Section</p>
+
+
+<section class="main-content">
+	<div class="card">
+		<div class="title_container">
+			<h4> TEST CARD </h4>
+		</div>
+		<div class="container" style="display:flex">
+			<img src="../Asset/JS.png" style="display: flex;"></img>
+			<p style="display: flex;"> Test Words</p>
+		</div>
 	</div>
-</nav>
-  
-<main>
-	<div class="content">
-	  <p>Main Section</p>
-	</div>
-</main>
+</section>
