--- a/test/test.html
+++ b/test/test.html
@@ -1,5 +1,1 @@
-<head>
-	<script src="https://cdn.jsdelivr.net/gh/Sanarous/files@1.13/js/linkcard.js"></script>
-</head>
-
-<a href="https://chukuangren.com" class="LinkCard">楚狂人</a>
+<iframe src="https://onedrive.live.com/embed?cid=AACD96FD289D9DD0&resid=AACD96FD289D9DD0%21774&authkey=AJisbOY_eiPuEYI" width="98" height="120" frameborder="0" scrolling="no"></iframe>
